<resources>
    <string name="app_name">getaway library</string>
    <string name="bookmark_checked">place checked</string>
    <string name="bookmark_title_label">bookmark name</string>
    <string name="bookmark_details_label">memos</string>
    <string name="bookmarkname_hint">put your dream place name here</string>
    <string name="place_address">enter address here</string>
    <string name="date_picker_title">Date of adding</string>
    <string name="input_memos">input memos</string>
    <string name="accesstoken">pk.eyJ1IjoiYWxpc29uZ291IiwiYSI6ImNqcGFwdXc5czAyOWgzbG9mZmsyNTh2a2wifQ.FSS06iLZDD3cJ4exXRyZuA</string>
    <string name="new_bookmark">add bookmark</string>
    <string name="show_count">show count</string>
    <string name="hide_subtitle">hide counts</string>
    <string name="subtitle_format">I have %1$s bookmarks</string>
    <string name="user_location_permission_explanation">request location</string>
    <string name="user_location_permission_not_granted">not able to get location</string>
    <string name="wishlist">Wishlist</string>
    <string name="navigation">Navigation</string>
    <string name="location">Location</string>
</resources>
