<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:mapbox="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookmark_title_label"
        />
    <EditText
        android:id="@+id/bookmarkname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bookmarkname_hint"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Address"
        />
    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place_address"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookmark_details_label"/>
    <EditText
        android:id="@+id/memo_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_memos"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/adding_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="choose date of adding"/>

    <Button
        android:id="@+id/datebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />

    <CheckBox
        android:id="@+id/isChecked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookmark_checked"/>



</LinearLayout>